--- a/src/settings/Forecasting.settings
+++ b/src/settings/Forecasting.settings
@@ -226,6 +226,30 @@
             <label>Last Modified Date</label>
         </opportunityListFieldsLabelMappings>
         <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6G</field>
+            <label>Competitor 1</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6k</field>
+            <label>Competitor 1 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6Q</field>
+            <label>Competitor 2</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6p</field>
+            <label>Competitor 2 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6V</field>
+            <label>Competitor 3</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6z</field>
+            <label>Competitor 3 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
             <field>00N3600000CsOec</field>
             <label>Current Generator(s)</label>
         </opportunityListFieldsLabelMappings>
@@ -244,6 +268,10 @@
         <opportunityListFieldsLabelMappings>
             <field>00N3600000NT7Jj</field>
             <label>Discount Percent Status</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6B</field>
+            <label>Leading Competitor</label>
         </opportunityListFieldsLabelMappings>
         <opportunityListFieldsLabelMappings>
             <field>00N3600000CsOee</field>
@@ -291,11 +319,18 @@
             <field>OPPORTUNITY.LAST_ACTIVITY</field>
             <field>OPPORTUNITY.CREATED_DATE</field>
             <field>OPPORTUNITY.LAST_UPDATE</field>
+            <field>00N3600000R9U6G</field>
+            <field>00N3600000R9U6k</field>
+            <field>00N3600000R9U6Q</field>
+            <field>00N3600000R9U6p</field>
+            <field>00N3600000R9U6V</field>
+            <field>00N3600000R9U6z</field>
             <field>00N3600000CsOec</field>
             <field>00N3600000OIAlL</field>
             <field>00N3600000CsOed</field>
             <field>00N3600000NT7JF</field>
             <field>00N3600000NT7Jj</field>
+            <field>00N3600000R9U6B</field>
             <field>00N3600000CsOee</field>
             <field>00N3600000CsOef</field>
             <field>00N3600000CsOeg</field>
@@ -453,6 +488,30 @@
             <label>Last Modified Date</label>
         </opportunityListFieldsLabelMappings>
         <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6G</field>
+            <label>Competitor 1</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6k</field>
+            <label>Competitor 1 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6Q</field>
+            <label>Competitor 2</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6p</field>
+            <label>Competitor 2 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6V</field>
+            <label>Competitor 3</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6z</field>
+            <label>Competitor 3 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
             <field>00N3600000CsOec</field>
             <label>Current Generator(s)</label>
         </opportunityListFieldsLabelMappings>
@@ -471,6 +530,10 @@
         <opportunityListFieldsLabelMappings>
             <field>00N3600000NT7Jj</field>
             <label>Discount Percent Status</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6B</field>
+            <label>Leading Competitor</label>
         </opportunityListFieldsLabelMappings>
         <opportunityListFieldsLabelMappings>
             <field>00N3600000CsOee</field>
@@ -518,11 +581,18 @@
             <field>OPPORTUNITY.LAST_ACTIVITY</field>
             <field>OPPORTUNITY.CREATED_DATE</field>
             <field>OPPORTUNITY.LAST_UPDATE</field>
+            <field>00N3600000R9U6G</field>
+            <field>00N3600000R9U6k</field>
+            <field>00N3600000R9U6Q</field>
+            <field>00N3600000R9U6p</field>
+            <field>00N3600000R9U6V</field>
+            <field>00N3600000R9U6z</field>
             <field>00N3600000CsOec</field>
             <field>00N3600000OIAlL</field>
             <field>00N3600000CsOed</field>
             <field>00N3600000NT7JF</field>
             <field>00N3600000NT7Jj</field>
+            <field>00N3600000R9U6B</field>
             <field>00N3600000CsOee</field>
             <field>00N3600000CsOef</field>
             <field>00N3600000CsOeg</field>
@@ -680,6 +750,30 @@
             <label>Last Modified Date</label>
         </opportunityListFieldsLabelMappings>
         <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6G</field>
+            <label>Competitor 1</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6k</field>
+            <label>Competitor 1 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6Q</field>
+            <label>Competitor 2</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6p</field>
+            <label>Competitor 2 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6V</field>
+            <label>Competitor 3</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6z</field>
+            <label>Competitor 3 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
             <field>00N3600000CsOec</field>
             <label>Current Generator(s)</label>
         </opportunityListFieldsLabelMappings>
@@ -698,6 +792,10 @@
         <opportunityListFieldsLabelMappings>
             <field>00N3600000NT7Jj</field>
             <label>Discount Percent Status</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6B</field>
+            <label>Leading Competitor</label>
         </opportunityListFieldsLabelMappings>
         <opportunityListFieldsLabelMappings>
             <field>00N3600000CsOee</field>
@@ -745,11 +843,18 @@
             <field>OPPORTUNITY.LAST_ACTIVITY</field>
             <field>OPPORTUNITY.CREATED_DATE</field>
             <field>OPPORTUNITY.LAST_UPDATE</field>
+            <field>00N3600000R9U6G</field>
+            <field>00N3600000R9U6k</field>
+            <field>00N3600000R9U6Q</field>
+            <field>00N3600000R9U6p</field>
+            <field>00N3600000R9U6V</field>
+            <field>00N3600000R9U6z</field>
             <field>00N3600000CsOec</field>
             <field>00N3600000OIAlL</field>
             <field>00N3600000CsOed</field>
             <field>00N3600000NT7JF</field>
             <field>00N3600000NT7Jj</field>
+            <field>00N3600000R9U6B</field>
             <field>00N3600000CsOee</field>
             <field>00N3600000CsOef</field>
             <field>00N3600000CsOeg</field>
@@ -907,6 +1012,30 @@
             <label>Last Modified Date</label>
         </opportunityListFieldsLabelMappings>
         <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6G</field>
+            <label>Competitor 1</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6k</field>
+            <label>Competitor 1 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6Q</field>
+            <label>Competitor 2</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6p</field>
+            <label>Competitor 2 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6V</field>
+            <label>Competitor 3</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6z</field>
+            <label>Competitor 3 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
             <field>00N3600000CsOec</field>
             <label>Current Generator(s)</label>
         </opportunityListFieldsLabelMappings>
@@ -925,6 +1054,10 @@
         <opportunityListFieldsLabelMappings>
             <field>00N3600000NT7Jj</field>
             <label>Discount Percent Status</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6B</field>
+            <label>Leading Competitor</label>
         </opportunityListFieldsLabelMappings>
         <opportunityListFieldsLabelMappings>
             <field>00N3600000CsOee</field>
@@ -972,11 +1105,18 @@
             <field>OPPORTUNITY.LAST_ACTIVITY</field>
             <field>OPPORTUNITY.CREATED_DATE</field>
             <field>OPPORTUNITY.LAST_UPDATE</field>
+            <field>00N3600000R9U6G</field>
+            <field>00N3600000R9U6k</field>
+            <field>00N3600000R9U6Q</field>
+            <field>00N3600000R9U6p</field>
+            <field>00N3600000R9U6V</field>
+            <field>00N3600000R9U6z</field>
             <field>00N3600000CsOec</field>
             <field>00N3600000OIAlL</field>
             <field>00N3600000CsOed</field>
             <field>00N3600000NT7JF</field>
             <field>00N3600000NT7Jj</field>
+            <field>00N3600000R9U6B</field>
             <field>00N3600000CsOee</field>
             <field>00N3600000CsOef</field>
             <field>00N3600000CsOeg</field>
@@ -1142,6 +1282,30 @@
             <label>Last Modified Date</label>
         </opportunityListFieldsLabelMappings>
         <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6G</field>
+            <label>Competitor 1</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6k</field>
+            <label>Competitor 1 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6Q</field>
+            <label>Competitor 2</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6p</field>
+            <label>Competitor 2 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6V</field>
+            <label>Competitor 3</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6z</field>
+            <label>Competitor 3 Price</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
             <field>00N3600000CsOec</field>
             <label>Current Generator(s)</label>
         </opportunityListFieldsLabelMappings>
@@ -1160,6 +1324,10 @@
         <opportunityListFieldsLabelMappings>
             <field>00N3600000NT7Jj</field>
             <label>Discount Percent Status</label>
+        </opportunityListFieldsLabelMappings>
+        <opportunityListFieldsLabelMappings>
+            <field>00N3600000R9U6B</field>
+            <label>Leading Competitor</label>
         </opportunityListFieldsLabelMappings>
         <opportunityListFieldsLabelMappings>
             <field>00N3600000CsOee</field>
@@ -1209,11 +1377,18 @@
             <field>OPPORTUNITY.LAST_ACTIVITY</field>
             <field>OPPORTUNITY.CREATED_DATE</field>
             <field>OPPORTUNITY.LAST_UPDATE</field>
+            <field>00N3600000R9U6G</field>
+            <field>00N3600000R9U6k</field>
+            <field>00N3600000R9U6Q</field>
+            <field>00N3600000R9U6p</field>
+            <field>00N3600000R9U6V</field>
+            <field>00N3600000R9U6z</field>
             <field>00N3600000CsOec</field>
             <field>00N3600000OIAlL</field>
             <field>00N3600000CsOed</field>
             <field>00N3600000NT7JF</field>
             <field>00N3600000NT7Jj</field>
+            <field>00N3600000R9U6B</field>
             <field>00N3600000CsOee</field>
             <field>00N3600000CsOef</field>
             <field>00N3600000CsOeg</field>
