--- a/src/settings/Search.settings
+++ b/src/settings/Search.settings
@@ -145,6 +145,12 @@
         <searchSettingsByObject>
             <enhancedLookupEnabled>false</enhancedLookupEnabled>
             <lookupAutoCompleteEnabled>false</lookupAutoCompleteEnabled>
+            <name>Game_Round__c</name>
+            <resultsPerPageCount>25</resultsPerPageCount>
+        </searchSettingsByObject>
+        <searchSettingsByObject>
+            <enhancedLookupEnabled>false</enhancedLookupEnabled>
+            <lookupAutoCompleteEnabled>false</lookupAutoCompleteEnabled>
             <name>Game_Variable__c</name>
             <resultsPerPageCount>25</resultsPerPageCount>
         </searchSettingsByObject>
